--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <pdfbox.version>2.0.26</pdfbox.version>
     <picocli.version>4.6.3</picocli.version>
     <junit.version>5.8.2</junit.version>
+    <mockito.version>4.5.1</mockito.version>
   </properties>
 
   <modules>
@@ -62,6 +63,11 @@
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter</artifactId>
         <version>${junit.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-core</artifactId>
+        <version>${mockito.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
