refactor: rename core module to common

--- a/opdf-cli/pom.xml
+++ b/opdf-cli/pom.xml
@@ -17,7 +17,7 @@
   <dependencies>
     <dependency>
       <groupId>dev.noid.toolbox.opdf</groupId>
-      <artifactId>opdf-core</artifactId>
+      <artifactId>opdf-common</artifactId>
     </dependency>
     <dependency>
       <groupId>dev.noid.toolbox.opdf</groupId>
