build: assemble fat jar

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
     <module>opdf-api</module>
     <module>opdf-cli</module>
     <module>opdf-pdfbox</module>
+    <module>opdf-assembly</module>
   </modules>
 
   <dependencyManagement>
