--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,3 +35,9 @@ jobs:
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v2.1.10
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: opdf
+          path: opdf-assembly/target/opdf-*.jar
