--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
   <properties>
     <encoding>utf-8</encoding>
-    <java.version>11</java.version>
+    <java.version>8</java.version>
     <pdfbox.version>2.0.26</pdfbox.version>
     <picocli.version>4.6.3</picocli.version>
     <junit.version>5.9.0</junit.version>
@@ -72,7 +72,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.10.1</version>
         <configuration>
-          <release>${java.version}</release>
+          <source>${java.version}</source>
+          <target>${java.version}</target>
         </configuration>
       </plugin>
       <plugin>
