--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,9 +1,16 @@
-  version: 2
-  updates:
-    - package-ecosystem: maven
-      directory: /
-      schedule:
-        interval: daily
-      target-branch: develop
-      labels:
-        - "chore"
+version: 2
+updates:
+  - package-ecosystem: maven
+    directory: /
+    schedule:
+      interval: daily
+    target-branch: develop
+    labels:
+      - "chore"
+  - package-ecosystem: github-actions
+    directory: /
+    schedule:
+      interval: daily
+    target-branch: develop
+    labels:
+      - "chore"
