--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,17 +23,17 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3.0.2
+        uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b
 
       - name: Setup Java
-        uses: actions/setup-java@v3.4.1
+        uses: actions/setup-java@9519cf1382ac8dc61ad461f7f7cb45f033220189
         with:
           distribution: adopt
           java-version: ${{ matrix.java }}
           cache: maven
 
       - name: Initialize CodeQL
-        uses: github/codeql-action/init@v2.1.19
+        uses: github/codeql-action/init@f5d217be74900c6ac8fbbe53f3c10376ba4e64da
         with:
           languages: java
           queries: security-and-quality
@@ -42,10 +42,10 @@ jobs:
         run: ./mvnw package
 
       - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v2.1.19
+        uses: github/codeql-action/analyze@f5d217be74900c6ac8fbbe53f3c10376ba4e64da
 
       - name: Upload artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@3cea5372237819ed00197afe530f5a7ea3e805c8
         with:
           name: opdf
           path: opdf-assembly/target/opdf-*.jar
