--- a/.github/workflows/native.yml
+++ b/.github/workflows/native.yml
@@ -1,7 +1,7 @@
 name: Native CI
 
 on:
-  workflow_dispatch:
+  push:
 
 permissions:
   contents: read
@@ -9,7 +9,6 @@ permissions:
 jobs:
   pipeline:
     runs-on: ${{ matrix.os }}
-    if: "!contains(github.event.head_commit.message, '[ci skip]') && !contains(github.event.head_commit.message, '[skip ci]') && !contains(github.event.pull_request.title, '[skip ci]') && !contains(github.event.pull_request.title, '[ci skip]')"
     defaults:
       run:
         shell: bash
