chore: skip ci on develop branch

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,8 +2,7 @@ name: CI
 
 on:
   push:
-    branches-ignore:
-      - dependabot/**
+    branches-ignore: [dependabot/**, native]
   pull_request:
   workflow_dispatch:
 
