--- a/.github/workflows/native.yml
+++ b/.github/workflows/native.yml
@@ -37,6 +37,9 @@ jobs:
           components: 'native-image'
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Make Maven executable
+        run: chmod +x ./mvnw
+
       - name: Build with Maven
         run: ./mvnw package
 
