--- a/.github/workflows/native.yml
+++ b/.github/workflows/native.yml
@@ -56,5 +56,5 @@ jobs:
       - name: Upload artifacts
         uses: actions/upload-artifact@3cea5372237819ed00197afe530f5a7ea3e805c8
         with:
-          name: opdf-${{ os_name }}
+          name: opdf-${{ matrix.os_name }}
           path: .
