--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,7 +47,7 @@ jobs:
         uses: actions/upload-artifact@3cea5372237819ed00197afe530f5a7ea3e805c8
         with:
           name: opdf
-          path: opdf-assembly/target/opdf-*.jar
+          path: opdf-assembly/target/opdf.jar
 
   build-native:
     runs-on: ${{ matrix.os }}
