--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -85,7 +85,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ ubuntu-latest, macos-latest, windows-latest ]
+        os: [ ubuntu-latest, macos-latest, windows-2019 ]
         include:
           - os: ubuntu-latest
             artifact_name: opdf
@@ -93,7 +93,7 @@ jobs:
           - os: macos-latest
             artifact_name: opdf
             package_name: opdf-macos
-          - os: windows-latest
+          - os: windows-2019
             artifact_name: opdf.exe
             package_name: opdf-windows
     steps:
