build: bump graalvm version to latest

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -105,7 +105,7 @@ jobs:
         uses: graalvm/setup-graalvm@e82ef137ecc5af894d22d4a80243e3a057b5cc7f
         with:
           components: native-image
-          version: dev
+          version: latest
           java-version: 11
           github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Build native image
