--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   push:
-    branches-ignore: [ dependabot/**, native ]
+    branches-ignore: [ dependabot/** ]
   pull_request:
   workflow_dispatch:
 
@@ -13,14 +13,14 @@ jobs:
       fail-fast: false
       matrix:
         os: [ ubuntu-latest, macos-latest, windows-latest ]
-        java: [ 8, 11, 17 ]
+        java: [ 11, 17, 19 ]
     steps:
       - name: Checkout repository
         uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b
       - name: Setup Java
         uses: actions/setup-java@9519cf1382ac8dc61ad461f7f7cb45f033220189
         with:
-          distribution: adopt
+          distribution: temurin
           java-version: ${{ matrix.java }}
           cache: maven
       - name: Executable Maven Wrapper
@@ -42,8 +42,8 @@ jobs:
       - name: Setup Java
         uses: actions/setup-java@9519cf1382ac8dc61ad461f7f7cb45f033220189
         with:
-          distribution: adopt
-          java-version: 11
+          distribution: temurin
+          java-version: 17
           cache: maven
       - name: Initialize CodeQL
         uses: github/codeql-action/init@f5d217be74900c6ac8fbbe53f3c10376ba4e64da
@@ -66,8 +66,8 @@ jobs:
       - name: Setup Java
         uses: actions/setup-java@9519cf1382ac8dc61ad461f7f7cb45f033220189
         with:
-          distribution: adopt
-          java-version: 11
+          distribution: temurin
+          java-version: 17
           cache: maven
       - name: Executable Maven Wrapper
         run: chmod +x ./mvnw
@@ -105,8 +105,8 @@ jobs:
         uses: graalvm/setup-graalvm@e82ef137ecc5af894d22d4a80243e3a057b5cc7f
         with:
           components: native-image
-          version: latest
-          java-version: 11
+          version: 22.3.0
+          java-version: 17
           github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Build native image
         run: native-image --verbose --no-fallback -J-Xmx8g -jar opdf.jar
