--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ ubuntu-latest, macos-latest, windows-latest ]
+        os: [ ubuntu-22.04, macos-12, windows-2022 ]
         java: [ 11, 17, 19 ]
     steps:
       - name: Checkout repository
@@ -31,7 +31,7 @@ jobs:
 
   quality-check:
     needs: test-project
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     permissions:
       actions: read
       contents: read
@@ -59,7 +59,7 @@ jobs:
 
   package-jars:
     needs: quality-check
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout repository
         uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b
@@ -85,7 +85,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ ubuntu-latest, macos-latest, windows-2019 ]
+        os: [ ubuntu-22.04, macos-12, windows-2022 ]
         include:
           - os: ubuntu-latest
             artifact_name: opdf
