--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
   <properties>
     <encoding>utf-8</encoding>
-    <java.version>8</java.version>
+    <java.version>17</java.version>
     <pdfbox.version>2.0.27</pdfbox.version>
     <junit.version>5.9.2</junit.version>
   </properties>
@@ -69,8 +69,7 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.10.1</version>
         <configuration>
-          <source>${java.version}</source>
-          <target>${java.version}</target>
+          <release>${java.version}</release>
         </configuration>
       </plugin>
       <plugin>
