refactor: generic data factory provider

--- a/opdf-api/pom.xml
+++ b/opdf-api/pom.xml
@@ -12,4 +12,12 @@
 
   <artifactId>opdf-api</artifactId>
   <name>Open PDF Tool :: API</name>
+
+  <dependencies>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
 </project>
