--- a/.github/workflows/auto-merge-dependabot.yml
+++ b/.github/workflows/auto-merge-dependabot.yml
@@ -1,6 +1,8 @@
 name: Auto-merge Dependabot PRs
 
-on: pull_request_target
+on:
+  pull_request_target:
+    types: [ review_requested ]
 
 permissions:
   pull-requests: write
@@ -14,6 +16,7 @@ jobs:
       - name: Fetch Dependabot metadata
         id: dependabot-metadata
         uses: dependabot/fetch-metadata@c9c4182bf1b97f5224aee3906fd373f6b61b4526
+
       - name: Enable auto-merge for minor updates
         if: ${{ steps.dependabot-metadata.outputs.update-type != 'version-update:semver-major' }}
         env:
