--- a/pom.xml
+++ b/pom.xml
@@ -13,10 +13,10 @@
 
   <properties>
     <encoding>utf-8</encoding>
-    <java.version>17</java.version>
+    <java.version>21</java.version>
     <pdfbox.version>3.0.0</pdfbox.version>
     <junit.version>5.10.1</junit.version>
-    <mockito.version>5.2.0</mockito.version>
+    <mockito.version>5.7.0</mockito.version>
   </properties>
 
   <modules>
@@ -63,7 +63,7 @@
       </dependency>
       <dependency>
         <groupId>org.mockito</groupId>
-        <artifactId>mockito-inline</artifactId>
+        <artifactId>mockito-core</artifactId>
         <version>${mockito.version}</version>
       </dependency>
     </dependencies>
