--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,13 +60,13 @@ jobs:
         uses: github/codeql-action/analyze@cdcdbb579706841c47f7063dda365e292e5cad7a
       - name: Perform SonarCloud Analysis
         run: |
-          ./mvnw verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
-            -Dsonar.host.url=https://sonarcloud.io
-            -Dsonar.token=${{ secrets.SONAR_TOKEN }}
-            -Dsonar.organization=${{ secrets.SONAR_KEY }}
-            -Dsonar.pullrequest.branch=${{ github.HEAD_REF }}
-            -Dsonar.pullrequest.base=${{ github.BASE_REF }}
-            -Dsonar.pullrequest.key=${{ github.event.number }}
+          ./mvnw verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
+            -Dsonar.host.url=https://sonarcloud.io \
+            -Dsonar.token=${{ secrets.SONAR_TOKEN }} \
+            -Dsonar.organization=${{ secrets.SONAR_KEY }} \
+            -Dsonar.pullrequest.branch=${{ github.HEAD_REF }} \
+            -Dsonar.pullrequest.base=${{ github.BASE_REF }} \
+            -Dsonar.pullrequest.key=${{ github.event.number }} \
             -Dsonar.qualitygate.wait=true
 
   package-jars:
