--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
   workflow_dispatch:
 
+concurrency:
+  group: ${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   test-project:
     runs-on: ${{ matrix.os }}
@@ -58,10 +62,12 @@ jobs:
         run: |
           ./mvnw verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
             -Dsonar.host.url=https://sonarcloud.io \
-            -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
+            -Dsonar.token=${{ secrets.SONAR_TOKEN }} \
             -Dsonar.organization=${{ secrets.SONAR_KEY }} \
-            -Dsonar.branch.name=${{ github.event.inputs.ref_name || github.REF_NAME}} \
-            -Dsonar.scm.disabled=true
+            -Dsonar.pullrequest.branch=${{ github.HEAD_REF }} \
+            -Dsonar.pullrequest.base=${{ github.BASE_REF }} \
+            -Dsonar.pullrequest.key=${{ github.event.number }} \
+            -Dsonar.qualitygate.wait=true
 
   package-jars:
     needs: quality-check
