--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,13 +4,13 @@ updates:
     directory: /
     schedule:
       interval: daily
-    target-branch: develop
+    target-branch: main
     labels:
       - "chore"
   - package-ecosystem: github-actions
     directory: /
     schedule:
       interval: daily
-    target-branch: develop
+    target-branch: main
     labels:
       - "chore"
