--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,8 +2,11 @@ name: CI
 
 on:
   push:
-    branches-ignore: [ dependabot/** ]
+    tags: [ '[0-9]+.[0-9]+.[0-9]+' ]
+    branches: [ main ]
   pull_request:
+    branches: [ main ]
+    types: [ opened, reopened, synchronize ]
   workflow_dispatch:
 
 concurrency:
@@ -41,6 +44,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11
+        with:
+          fetch-depth: 0
       - name: Setup Java
         uses: actions/setup-java@0ab4596768b603586c0de567f2430c30f5b0d2b0
         with:
