--- a/opdf-cli/pom.xml
+++ b/opdf-cli/pom.xml
@@ -20,6 +20,10 @@
       <artifactId>opdf-api</artifactId>
     </dependency>
     <dependency>
+      <groupId>dev.noid.toolbox.opdf</groupId>
+      <artifactId>opdf-annotations</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
       <scope>test</scope>
