--- a/opdf-commands/pom.xml
+++ b/opdf-commands/pom.xml
@@ -10,13 +10,17 @@
     <version>0.1.0</version>
   </parent>
 
-  <artifactId>opdf-pdfbox</artifactId>
+  <artifactId>opdf-commands</artifactId>
   <name>Open PDF Tool :: Apache PDFBox</name>
 
   <dependencies>
     <dependency>
       <groupId>dev.noid.toolbox.opdf</groupId>
       <artifactId>opdf-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>dev.noid.toolbox.opdf</groupId>
+      <artifactId>opdf-annotations</artifactId>
     </dependency>
     <dependency>
       <groupId>org.apache.pdfbox</groupId>
